<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Web Comics</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Web Comic Manager</string>
    <string name="title_activity_title_page">TitlePage</string>
    <string name="title_activity_main_click_listener">MainClickListener</string>
    <string name="title_activity_front_page">FrontPage</string>
    <string name="title_activity_blank_main_page">BlankMainPage</string>
    <string name="title_activity_add__comic">Add_Comic</string>
    <string name="title_activity_view__comic">View_Comic</string>
    <string name="AddComicButton">Add Comic</string>
    <string name="UrlHint">http://www.webcomic.com/comic</string>
    <string name="VerifyComicButton">Verify Comic</string>
    <string name="ImageDesc">Webcomic</string>
    <string name="ComicNameHint">Webcomic</string>
    <string name="URL">URL</string>
    <string name="Name">Name</string>
    <string name="Placeholder">TextView</string>
    <string name="UpdateAll">Update All</string>
    <string name="GoTo">GoTo</string>
    <string name="title_activity_front__page">Front_Page</string>
    <string name="title_activity_edit__comic">Edit_Comic</string>
    <string name="title_activity_comic_updater">ComicUpdater</string>
    <string name="title_activity_comic__gallery">Comic_Gallery</string>
    <string name="title_comic_detail">Comic Detail</string>
    <string name="title_comic_list">Comics</string>
    <string name="title_activity_add__comic__webview">Add_Comic_Webview</string>
    <string name="action_settings">Settings</string>
    <string name="Url">Url</string>
    <string name="ImageUrl">Image Url</string>
    <string name="AddComic">Add Comic</string>
    <string name="ComicName">Comic Name</string>
    <string name="ViewAltText">Alt Text</string>
    <string name="Viewcomics">View All</string>
    <string name="AltText">Alt Text</string>
    <string name="VisitSite">Visit Site</string>
    <string name="inline_preferences">Inline Preferences</string>
    <string name="title_checkbox_preference">title_checkbox_preference</string>
    <string name="summary_checkbox_preference">summary_checkbox_preference</string>
    <string name="dialog_based_preferences">dialog_based_preferences</string>

    <string-array name="entries_list_preference">
        <item>List Item 1</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>List Entry Value 1</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="selectComic">Selection</string>
    <string name="title_activity_comic_edit">ComicEditActivity</string>
    <string name="LastUpdated">Last Updated</string>
    <string name="Updated">Updated</string>

</resources>