<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/mfUpdate" 
        android:title="@string/UpdateAll"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_update"></item>
    
    <item 
        android:id="@+id/mfAddComic" 
        android:title="@string/AddComicButton"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_addcomic"></item>
    
    <item 
        android:id="@+id/fViewAllComics" 
        android:title="@string/Viewcomics"
        android:showAsAction="ifRoom|withText"></item>
    
    <item android:id="@+id/Settings"
          android:title="@string/menu_settings"
          android:showAsAction="ifRoom|withText"></item>
    
    
</menu>