<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditComicFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/nameValueFragment"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/ComicNameHint"
            android:inputType="text|textNoSuggestions" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/URL" />

        <EditText
            android:id="@+id/urlValueFragment"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/UrlHint"
            android:inputType="textUri|textWebEditText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.50"
            android:text="@string/ImageUrl" />

        <EditText
            android:id="@+id/imageValueFragment"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="textUri|textWebEditText" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/AltText" />

        <EditText
            android:id="@+id/altTextValueFragment"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="text|textNoSuggestions" />
    </LinearLayout>

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/SaveChanges" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout4" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Updated" />

        <TextView
            android:id="@+id/updatedSinceValueFragment"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />
    </LinearLayout>

</RelativeLayout>